# sdl-template-c

./: .gitignore  meson.build
src/: Application.c  Application.h  Button.h  Component.h  List.h  main.c
